--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,14 +45,8 @@
   src: url("../fonts/PublicSans-Bold.ttf");
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
 
 
 
@@ -75,6 +69,29 @@ input[type="search"]::-ms-reveal {
 }
 
 /* GERAL */
+:root{
+  --color-white: #FFFFFF;
+  --color-dark: rgba(0, 0, 0, 1);
+  --color-lightGray: #E5E5E5;
+  --color-extraLightGray: rgba(245, 245, 245, 1);
+  --color-gray: rgba(86, 86, 86, 1);
+  --color-light: rgba(224, 224, 224, 1);
+
+  --color-purple: rgba(56, 55, 161, 1);
+  --color-lightBlue: rgba(186, 213, 219, 1);
+  --color-pastelYellow: rgba(255, 251, 159, 1);
+  --color-pastelOrange: rgba(251, 211, 164, 1);
+ 
+  --border-radius: 2rem;
+  --card-border-radius: 1rem;
+  --btn-padding: 0.6rem 1rem;
+  --search-padding: 0.6rem 1rem;
+  --card-padding: 1rem; 
+
+  --sticky-top-left: 5.4rem;
+  --sticky-top-right: -18rem;
+}
+
 
 .textPadrao {
   font-family: "Raleway Bold";
@@ -102,16 +119,16 @@ body {
   scroll-behavior: smooth;
   max-width: 100%;
 }
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow-x: hidden;
-}
 
-* {
+
+*, *::before, *::after {
   margin: 0;
   padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  border: none;
 }
 
 .enfase {
@@ -1373,4 +1390,397 @@ margin-left: 5px;
   grid-column: 2 span / 2 span;
   width: 100%;
   height: 100%;
+}
+
+
+/* NOVA FEED */
+
+
+body.feed{
+  font-family: 'Raleway', sans-serif;
+  color: var(--color-dark);
+  background: var(--color-lightGray);
+  overflow-x: hidden;
+}
+
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+
+.fotoDePerfil{
+  width: 3.5rem;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 1px solid var(--color-purple);
+}
+
+img{
+  display: block;
+  width: 100%;
+}
+
+.btn {
+  display: inline-block;
+  padding: var(--btn-padding);
+  font-weight: 500;
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  transition: all 300ms ease;
+  font-size: 0.9rem;
+}
+
+.btn:hover{
+  opacity: 0.8;
+}
+
+
+.btn-primary{
+  background: var(--color-pastelYellow);
+  color: white;
+}
+
+.text-bold{
+  font-weight: 500;
+}
+
+.text-muted{
+  color: var(--color-gray);
+}
+
+
+ /* NavFeed */
+nav.feed{
+  width: 100%;
+  background: var(--color-white);
+  padding: 0.7rem 0;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
+
+nav .logo {
+  width: 9.5rem;
+}
+
+nav .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav .caixa-de-busca{
+  background: var(--color-extraLightGray);
+  border-radius: var(--border-radius);
+  padding: var(--search-padding);
+  color: var(--color-dark);
+  
+}
+
+nav .caixa-de-busca input[type="search"]{
+  background: transparent;
+  width: 30vw;
+  margin-left: 1rem;
+  font-size: 0.9rem;
+  color: var(--color-dark);
+}
+
+nav .caixa-de-busca input[type="search"]::placeholder{
+  color: var(--color-gray);
+}
+
+nav .opcoes {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+
+/* main */
+
+main.feed{
+  position: relative;
+  top: 7rem;
+}
+
+main .container{
+  display: grid;
+  grid-template-columns: 18vw auto 20vw;
+  column-gap: 2rem;
+  position: relative;
+}
+
+
+
+/* LADO ESQUERDO */
+
+main .container .ladoEsquerdo{
+  height: max-content;
+  position: sticky;
+  top: var(--sticky-top-left);
+}
+
+main .container .ladoEsquerdo .perfil{
+  padding: var(--card-padding);
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+  width: 100%;
+}
+
+/* SIDE-BAR DO LADO ESQUERDO */
+
+.ladoEsquerdo .sidebar{
+  margin-top: 1rem;
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+}
+
+.ladoEsquerdo .sidebar .menu-item{
+  display: flex; 
+   align-items: center;
+   height: 4rem;
+   cursor: pointer;
+   transition: all 300ms ease;
+   position: relative;
+}
+
+.ladoEsquerdo .sidebar .menu-item:hover{
+  background-color: var(--color-light) ;
+}
+
+.ladoEsquerdo .sidebar i{
+  font-size: 1.4rem;
+  color: var(--color-dark);
+  margin-left: 2rem;
+  position: relative;
+}
+
+.ladoEsquerdo .sidebar a{
+  color: var(--color-dark);
+}
+
+.ladoEsquerdo .sidebar h3{
+  margin-left: 1.5rem;
+  font-size: 1rem;
+}
+
+.ladoEsquerdo .sidebar .ativo{
+  background-color: var(--color-light);
+}
+
+.ladoEsquerdo .sidebar .ativo i, .ladoEsquerdo .sidebar .ativo h3{
+  color:  var(--color-purple);
+}
+
+.ladoEsquerdo .sidebar .ativo::before{
+  content: "";
+  display: block;
+  width: 0.5rem;
+  height: 100%;
+  position: absolute;
+  background: var(--color-purple);
+}
+
+
+.ladoEsquerdo .sidebar .menu-item:first-child.ativo{
+  border-top-left-radius: var(--card-border-radius);
+  overflow: hidden;
+}
+
+.ladoEsquerdo .sidebar .menu-item:last-child.ativo{
+  border-bottom-left-radius: var(--card-border-radius);
+  overflow: hidden;
+}
+
+.ladoEsquerdo .btn{
+  margin-top: 1rem;
+  width: 100%;
+  text-align: center;
+  padding: 1rem 0;
+
+
+}
+
+.ladoESquerdo .btn a{
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--color-dark);
+}
+
+
+/* MEIO */
+.meio .criarPost{
+  background: var(--color-white);
+  width: 100%;
+  height: 6.4rem;
+  border-radius: var(--card-border-radius);
+  display: flex;
+  overflow: hidden;
+  margin-top: 1rem;
+}
+
+.meio .criarPost img{
+  width: 30rem;
+  aspect-ratio: 1/1;
+}
+
+.meio .criarPost h3 {
+  font-size: 0.9rem;
+}
+
+.meio .criarPost a{
+  font-family: 'Raleway', sans-serif;
+  font-size: 0.9rem;
+  font-weight: 700;
+  color: var(--color-dark);
+}
+
+.meio .faixaPost {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  padding-top: 1rem;
+  margin-left: -2rem;
+}
+
+.meio .criarPost button {
+  font-size: 0.9rem;
+  align-self: flex-end;
+  padding: 0.5rem 2rem;
+  margin-right:1rem ;
+  box-shadow: 4px 1px 18px 0px #00000057;
+
+}
+
+.meio .ads{
+  display: flex;
+  justify-content: space-between;
+  height: 12rem;
+  width: 100%;
+  max-width: 39.8rem;
+  gap: 0.5rem;
+  overflow-x: auto;
+  margin-top: 1rem;
+}
+
+.meio .ads .ad{
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  font-size: 0.75rem;
+  width: 100%;
+  max-width: 13rem;
+  background: var(--color-purple);
+  position: relative;
+  background: url("../images/Lontrinhas.svg") no-repeat center center/cover; /*botar a imagem do produto aqui*/
+}
+
+.meio .ads .ad .name{
+  z-index: 2;
+}
+
+.meio span.adTitulo{
+  font-weight: 600;
+  margin: 1rem 0;
+}
+
+.meio .ads .ad::before{
+  content: "";
+  display: block;
+  width: 100%;
+  height: 5rem;
+  background: black;
+  background: linear-gradient(rgba(0, 0, 0, 0.40), transparent);
+  position: absolute;
+  top: 0;
+  border-top-left-radius: var(--card-border-radius);
+  border-top-right-radius: var(--card-border-radius);
+}
+
+.meio .ads .ad .adHandler{
+  z-index: 2;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.meio .ads .ad .fotoDePerfil{
+  width: 2rem;
+  height: 2rem;
+  border: none;
+}
+
+.meio .ads .ad .adHandler p{
+  font-weight: 600;
+}
+
+/* feed 1 */
+
+.meio .feeds .feed{
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  margin: 1rem 0;
+  font-size: 0.85rem;
+  line-height: 1.5;
+}
+
+.meio .feed .head{
+  display: flex;
+  justify-content: space-between;
+}
+
+.meio .feed .usuario{
+  display: flex;
+  gap: 1rem;
+}
+
+.meio .feed .imagemPost{
+  border-radius: var(--card-border-radius);
+  overflow: hidden;
+  margin: 0.7rem 0;
+}
+.meio .feed .botoes{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.4rem;
+  margin: 0.6rem;
+}
+
+.meio .curtidoPor{
+  display: flex;
+}
+
+.meio .curtidoPor span{
+  width: 1.4rem;
+  height: 1.4rem;
+  display: block;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 1px solid var(--color-white);
+  margin-left: -0.6rem;
+}
+
+.meio .feed .curtidoPor span:first-child{
+  margin: 0;
+}
+
+.meio .curtidoPor p{
+  margin-left: 0.5rem;
 }
