--- a/private-adm/dashboard/pages/pets/pets.css
+++ b/private-adm/dashboard/pages/pets/pets.css
@@ -455,29 +455,47 @@ main .info-pets .perfis-pets {
 
 /* lista pet */
 .listaPets {
-  margin-top: 10px;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-.fotoPet {
-  width: 150px;
+  gap: 12px;
 }
 .pet {
-  background-color: #bad5db;
   display: flex;
-  flex-direction: row;
-  padding: 14px;
-  border-radius: 10px;
+  flex-direction: column;
+  align-items: center;
+  border-width: 1px;
+  background-color: #fffb9f;
+  border-color: black;
+  border-width: 3px;
+  border-style: solid;
+  border-radius: 30px;
+}
+
+.fotoPet {
+  margin-top: 10px;
+  background-color: #fffb9f;
 }
 .infoPet {
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
+  width: 100%;
+  margin-left: 27px;
+  margin-right: 27px;
+  padding-bottom: 10px;
+  border-radius: 26px;
+  border-top-right-radius: 0px;
+  border-top-left-radius: 0px;
+  background-color: #9998d3;
+  border-top-width: 3px;
+  border-style: solid;
 }
-.tutorPet {
+.texto-info {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+  font-weight: 900;
+  color: white;
+}
+.foto {
+  width: 150px;
 }
