--- a/private-adm/dashboard/pages/tutores/tutores.css
+++ b/private-adm/dashboard/pages/tutores/tutores.css
@@ -1,491 +1,536 @@
 /* fonte */
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700;800&display=swap");
 
 /* Root Variable */
 :root {
-    --roxo-primario: #7380ec;
-    --roxo-secundario: #3837A1;
-    --color-dark: #000000;
-    --color-light: rgba(132, 139, 200, 0.18);
-    --color-dark-variant: #677483;
-    --color-bg: #f6f6f9;
-    --color-bg-dois: #BAD5DB;
+  --roxo-primario: #7380ec;
+  --roxo-secundario: #3837a1;
+  --color-dark: #000000;
+  --color-light: rgba(132, 139, 200, 0.18);
+  --color-dark-variant: #677483;
+  --color-bg: #f6f6f9;
+  --color-bg-dois: #bad5db;
 
-    --card-border-radius: 2rem;
-    --border-radius-1: 0.4rem;
-    --border-radius-2: 0.8rem;
-    --border-radius-3: 1.2rem;
+  --card-border-radius: 2rem;
+  --border-radius-1: 0.4rem;
+  --border-radius-2: 0.8rem;
+  --border-radius-3: 1.2rem;
 
-    --card-padding: 1.5rem;
-    --padding-1: 1.2rem;
+  --card-padding: 1.5rem;
+  --padding-1: 1.2rem;
 
-    --box-shadow: 0 2rem 3rem var(--color-light)
+  --box-shadow: 0 2rem 3rem var(--color-light);
 }
 
 /* formatação */
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 
-html{
-    font-size: 14px;
+html {
+  font-size: 14px;
 }
 
-body{
-    width: 100vw;
-    height: 100vh;
-    font-family: 'Raleway', 'sans-serif';
-    overflow-x: hidden;
-    background-image: url(/petiti/private-adm/dashboard/images/dashboard-bg.svg);
-    background-repeat: no-repeat;
-    background-position: cover;
+body {
+  width: 100vw;
+  height: 100vh;
+  font-family: "Raleway", "sans-serif";
+  overflow-x: hidden;
+  background-image: url(/petiti/private-adm/dashboard/images/dashboard-bg.svg);
+  background-repeat: no-repeat;
+  background-position: cover;
 }
 
-.container{
-    display: grid;
-    margin: 0 auto;
-    gap: 1.8rem;
-    grid-template-columns:  18rem auto 23rem;
+.container {
+  display: grid;
+  margin: 0 auto;
+  gap: 1.8rem;
+  grid-template-columns: 18rem auto 23rem;
 }
 
-a{
-    color: var(--color-dark);
+a {
+  color: var(--color-dark);
 }
 
-h1{
-    font-weight: 800;
-    font-size: 2rem;
+h1 {
+  font-weight: 800;
+  font-size: 2rem;
 }
 
-h2{
-    font-size: 1.9rem;
-    font-weight: 700;
+h2 {
+  font-size: 1.9rem;
+  font-weight: 700;
 }
 
-h3{
-    font-size: 1.4rem;
+h3 {
+  font-size: 1.4rem;
 }
 
-h4{
-    font-size: 1rem;
+h4 {
+  font-size: 1rem;
 }
 
-h5{
-    font-size: 0.9rem;
+h5 {
+  font-size: 0.9rem;
 }
 
-.sucesso{
-    color: green;
+.sucesso {
+  color: green;
 }
 
-.perigo{
-    color: #d30c1d;;
+.perigo {
+  color: #d30c1d;
 }
 
-.foto-perfil{
-    width: 2.8rem;
-    height: 2.8rem;
-    border-radius: 50%;
-    overflow: hidden;
+.foto-perfil {
+  width: 2.8rem;
+  height: 2.8rem;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
-#img-denuncia{
-    width: 100%;
+#img-denuncia {
+  width: 100%;
 }
 
 /* SEÇÃO ASIDE-SIDEBAR */
 
 /* ---- aside */
-aside{
-    height: 100vh;
+aside {
+  height: 100vh;
 }
 
-aside .nuvem{
-    bottom: 10%;
+aside .nuvem {
+  bottom: 10%;
 }
 
-aside .close{
-    display: none;
+aside .close {
+  display: none;
 }
 
-aside .top{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 1.4rem;
-    margin-left: 2rem;
+aside .top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.4rem;
+  margin-left: 2rem;
 }
 
-aside .logo{
-    display: flex;
-    gap: 1rem;
-    align-items: center;
+aside .logo {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
 
-aside .logo img{
-    width: 5rem;
-    height: 5rem
+aside .logo img {
+  width: 5rem;
+  height: 5rem;
 }
 
 /* ---- sidebar */
 
-aside .sidebar{
-    display: flex;
-    flex-direction: column;
-    height: 86vh;
-    position: relative;
-    top: 3rem;
-    left: 1rem
+aside .sidebar {
+  display: flex;
+  flex-direction: column;
+  height: 86vh;
+  position: relative;
+  top: 3rem;
+  left: 1rem;
 }
 
-aside h3{
-    font-weight: 700;
+aside h3 {
+  font-weight: 700;
 }
 
-aside .sidebar .menu-item{
-    display: flex;
-    margin-left: 2rem;
-    gap: 1rem;
-    align-items: center;
-    position: relative;
-    height: 4rem;
-    transition: all 300ms ease;
+aside .sidebar .menu-item {
+  display: flex;
+  margin-left: 2rem;
+  gap: 1rem;
+  align-items: center;
+  position: relative;
+  height: 4rem;
+  transition: all 300ms ease;
 }
 
-aside .sidebar .menu-item span{
-    font-size: 1.6rem;
-    transition:  all 300ms ease;
+aside .sidebar .menu-item span {
+  font-size: 1.6rem;
+  transition: all 300ms ease;
 }
 
-aside .sidebar .menu-item:last-child{
-    position: absolute;
-    bottom: 6rem;
-    width: 100%;
+aside .sidebar .menu-item:last-child {
+  position: absolute;
+  bottom: 6rem;
+  width: 100%;
 }
 
-aside .sidebar .menu-item.active{
-    background: var(--color-light);
-    color: var(--roxo-secundario);
-    margin-left: 0;
-    border-radius: 0 20px 20px 0;
+aside .sidebar .menu-item.active {
+  background: var(--color-light);
+  color: var(--roxo-secundario);
+  margin-left: 0;
+  border-radius: 0 20px 20px 0;
 }
 
-aside .sidebar .menu-item.active:before{
-    content: '';
-    width: 6px;
-    height: 100%;
-    background: var(--roxo-secundario);
-    border-radius: 20px;
+aside .sidebar .menu-item.active:before {
+  content: "";
+  width: 6px;
+  height: 100%;
+  background: var(--roxo-secundario);
+  border-radius: 20px;
 }
 
-aside .sidebar .menu-item.active span{
-    color: var(--roxo-secundario);
-    margin-left: calc(1rem - 3px);
+aside .sidebar .menu-item.active span {
+  color: var(--roxo-secundario);
+  margin-left: calc(1rem - 3px);
 }
 
-aside .sidebar .menu-item:hover{
-    color: var(--roxo-secundario);
+aside .sidebar .menu-item:hover {
+  color: var(--roxo-secundario);
 }
 
-#logout:hover{
-    color: #d30c1d;
+#logout:hover {
+  color: #d30c1d;
 }
 
-#logout span{
-    transition:  all 100ms ease;
+#logout span {
+  transition: all 100ms ease;
 }
 
-aside .sidebar .menu-item:hover span{
-    margin-left: 1rem;
+aside .sidebar .menu-item:hover span {
+  margin-left: 1rem;
 }
-
 
 /* SEÇÃO MAIN */
-#cinza{
-    color: gray;
-    font-weight: 500;
-    margin-top: 1.8rem;
+#cinza {
+  color: gray;
+  font-weight: 500;
+  margin-top: 1.8rem;
 }
 
-.info{
-    margin-top: 1rem;
+.info {
+  margin-top: 1rem;
 }
 
-main{
-    background: var(--color-bg);
-    padding-top: 1.4rem;
-    padding-left: 1.4rem;
+main {
+  background: var(--color-bg);
+  padding-top: 1.4rem;
+  padding-left: 1.4rem;
 }
-
 
 /* ---- informações - perfis (tutores) */
 
-main .info-tutores{
-    margin-top: 2rem;
+main .info-tutores {
+  margin-top: 2rem;
 }
 
-main .info-tutores h2{
-    margin-bottom: 1rem;
+main .info-tutores h2 {
+  margin-bottom: 1rem;
 }
 
-main .info-tutores .perfis-tutores{
-    background: white;
-    width: 100%;
-    height: 800px;
-    overflow-y: auto;
-    border-radius: var(--card-border-radius);
-    padding: var(--card-padding);
-    box-shadow: var(--box-shadow);
+main .info-tutores .perfis-tutores {
+  background: white;
+  width: 100%;
+  height: 800px;
+  overflow-y: auto;
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  box-shadow: var(--box-shadow);
 }
 
-.search-bar{
-    width: 100%;
-    background: var(--color-bg);
-    display: flex;
-    align-items: center;
-    border-radius: 60px;
-    padding: 0 20px;
+.search-bar {
+  width: 100%;
+  background: var(--color-bg);
+  display: flex;
+  align-items: center;
+  border-radius: 60px;
+  padding: 0 20px;
 }
 
-.search-bar input{
-    background: transparent;
-    width: 100%;
-    border: 0;
-    outline: none;
-    padding: 24px 20px;
-    font-size: 1.1rem;
-    color: black;
-    border-radius: 30px;
+.search-bar input {
+  background: transparent;
+  width: 100%;
+  border: 0;
+  outline: none;
+  padding: 24px 20px;
+  font-size: 1.1rem;
+  color: black;
+  border-radius: 30px;
 }
 
-::placeholder{
-    font-weight: 600;
+::placeholder {
+  font-weight: 600;
 }
 
-.search-bar button{
-    background: #BAD5DB;
-    cursor: pointer;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
+.search-bar button {
+  background: #bad5db;
+  cursor: pointer;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
 
-.search-bar button #search-img{
-    width: 25px;
+.search-bar button #search-img {
+  width: 25px;
 }
 
 /* Style the tab */
 .tab {
-    margin-top: 1rem;
-    overflow: hidden;
-    border-bottom: 1px solid #ccc;
-  }
-  
-  /* Style the buttons that are used to open the tab content */
-  .tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
+  margin-top: 1rem;
+  overflow: hidden;
+  border-bottom: 1px solid #ccc;
+}
 
-    color: #677483;
-    font-family: 'Raleway';
-    font-weight: 700;
-  }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    background-color: var(--color-bg-dois);
-    border: none;
-  }
-  
-  /* Create an active/current tablink class */
-  .tab button.active {
-    color: #000000;
-    background-color: var(--color-bg-dois);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom: 2px solid var(--roxo-secundario);
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border-top: none;
-  }
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
 
-  #total-qtd{
-    margin-top: 1rem;
-  }
+  color: #677483;
+  font-family: "Raleway";
+  font-weight: 700;
+}
 
+/* Change background color of buttons on hover */
+.tab button:hover {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: var(--color-bg-dois);
+  border: none;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  color: #000000;
+  background-color: var(--color-bg-dois);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom: 2px solid var(--roxo-secundario);
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border-top: none;
+}
+
+#total-qtd {
+  margin-top: 1rem;
+}
 
 /* RIGHT SIDE - MENSAGENS */
-.right-side{
-    padding-top: 1.4rem;
-    background: var(--color-bg);
-    padding-right: 1rem;
+.right-side {
+  padding-top: 1.4rem;
+  background: var(--color-bg);
+  padding-right: 1rem;
 }
 
-.right-side .top-right{
-    display: flex;
-    justify-content: end;
-    gap: 2rem;
+.right-side .top-right {
+  display: flex;
+  justify-content: end;
+  gap: 2rem;
 }
 
-.right-side .top-right .perfil{
-    display: flex;
-    text-align: right;
-    margin-right: 1rem;
+.right-side .top-right .perfil {
+  display: flex;
+  text-align: right;
+  margin-right: 1rem;
 }
 
 /*---- denuncias recentes */
-#p-small{
-    color: gray;
-    font-weight: 500;
-    margin-top: 0.4rem;
+#p-small {
+  color: gray;
+  font-weight: 500;
+  margin-top: 0.4rem;
 }
 
-.right-side .container-denuncias .denuncias #icon-report{
-    background: #FFDCE8;
-    padding: 0.5rem;
-    border-radius: 50%;
-    color: black;
-    font-size: 2rem;
-    margin-bottom: 1.5rem;
+.right-side .container-denuncias .denuncias #icon-report {
+  background: #ffdce8;
+  padding: 0.5rem;
+  border-radius: 50%;
+  color: black;
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
 }
 
-.right-side .container-denuncias{
-    margin-top: 1rem;
+.right-side .container-denuncias {
+  margin-top: 1rem;
 }
 
-.right-side .container-denuncias h2{
-    margin-bottom: 0,8rem;
+.right-side .container-denuncias h2 {
+  margin-bottom: 0, 8rem;
 }
 
-.right-side .container-denuncias .denuncias{
-    margin-top: 1rem;
-    background: white;
-    padding: var(--card-padding);
-    border-radius: var(--card-border-radius);
-    box-shadow: var(--box-shadow);
-    transition: all 300ms ease;
+.right-side .container-denuncias .denuncias {
+  margin-top: 1rem;
+  background: white;
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  box-shadow: var(--box-shadow);
+  transition: all 300ms ease;
 }
 
-.right-side .container-denuncias .denuncias:hover{
-    box-shadow: none;
+.right-side .container-denuncias .denuncias:hover {
+  box-shadow: none;
 }
 
-.right-side .container-denuncias .denuncias .msg-denuncia{
-    display: grid;
-    grid-template-columns: 2.6rem auto;
-    gap: 1rem;
-    margin-bottom: 1.4rem;
+.right-side .container-denuncias .denuncias .msg-denuncia {
+  display: grid;
+  grid-template-columns: 2.6rem auto;
+  gap: 1rem;
+  margin-bottom: 1.4rem;
 }
 
 /*----categorias em alta*/
-.right-side .categorias-alta{
-    margin-top: 2rem;
+.right-side .categorias-alta {
+  margin-top: 2rem;
 }
 
-.right-side .categorias-alta h2{
-    margin-bottom: 0.8rem;
+.right-side .categorias-alta h2 {
+  margin-bottom: 0.8rem;
 }
 
-.right-side .categorias-alta .categoria{
-    background: white;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 0.7rem;
-    padding: 1.4rem var(--card-padding);
-    border-radius: var(--border-radius-3);
-    box-shadow: var(--box-shadow);
-    transition: all 300ms ease;
+.right-side .categorias-alta .categoria {
+  background: white;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 0.7rem;
+  padding: 1.4rem var(--card-padding);
+  border-radius: var(--border-radius-3);
+  box-shadow: var(--box-shadow);
+  transition: all 300ms ease;
 }
 
-.right-side .categorias-alta .categoria:hover{
-    box-shadow: none;
+.right-side .categorias-alta .categoria:hover {
+  box-shadow: none;
 }
 
-.right-side .categorias-alta .categoria .right{
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
-    margin: 0;
-    width: 100%;
+.right-side .categorias-alta .categoria .right {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  margin: 0;
+  width: 100%;
 }
 
-.right-side .categorias-alta .categoria .icon{
-    padding: 0.6rem;
-    color: black;
-    border-radius: 50%;
-    background: #DCF0F4;
-    display: flex;
+.right-side .categorias-alta .categoria .icon {
+  padding: 0.6rem;
+  color: black;
+  border-radius: 50%;
+  background: #dcf0f4;
+  display: flex;
 }
 
-.right-side .contato{
-    background-image: url(/petiti/private-adm/dashboard/images/fundo-btn.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
+.right-side .contato {
+  background-image: url(/petiti/private-adm/dashboard/images/fundo-btn.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-
-    padding: 0 0 0 1.8rem;
-    height: 85px;
-    border-radius: var(--border-radius-3);
-    box-shadow: var(--box-shadow);
-    transition: all 300ms ease;
+  padding: 0 0 0 1.8rem;
+  height: 85px;
+  border-radius: var(--border-radius-3);
+  box-shadow: var(--box-shadow);
+  transition: all 300ms ease;
 }
 
-.right-side .contato div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.right-side .contato div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.listaUsuarios{
-    display: flex;
-    flex-direction: row;
-    gap: 12px;
+.cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
-.usuario{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-width: 1px;
-    border-color: #3837A1;
-    border-style: solid;
-    border-radius: 30px;
-    padding: 30px;
+.card {
+  display: flex;
+  width: 400px;
+  flex-direction: column;
+  border-radius: 25px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #677483;
+  padding: 20px;
+  gap: 25px;
 }
-.usuario:hover{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-width: 1px;
-    background-color: #3837A1;
-    border-style: solid;
-    border-radius: 30px;
-    padding: 30px;
-    color: white;
-    transition: all 0.5s;
+.badges {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
-.fotoUsuario{
-    width: 150px;
+.badge {
+  border-radius: 20px;
+  padding: 8px;
+}
+.tipo {
+  background-color: #3837a1;
+  color: white;
+  font-weight: 900;
+}
+.ativo {
+  background-color: #9998d3;
+  color: white;
+  font-weight: 900;
+}
+.bloqueado {
+  background-color: #FBA4C3;
+  color: white;
+  font-weight: 900;
+}
+.infos-card {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+.foto-info {
+  width: 70px;
+}
+.perfil-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.card-data {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+  font-weight: bold;
+}
+.card-perfil a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #7380ec;
+}
+
+.botao {
+  width: 100%;
+  padding: 15px;
+  text-align: center;
+  border-radius: 15px;
+  color: white;
+  font-weight: bolder;
+}
+.bloquear{
+    background-color: #d30c1d;
+}
+.ativar{
+    background-color: #7380ec;
 }
