--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -472,8 +472,6 @@ body {
   height: 60px;
 }
 
-
-
 .previewFormFoto {
   margin-top: 10px;
   display: flex;
@@ -1238,31 +1236,21 @@ body {
   margin-left: 10px;
 }
 
-
 /* Recuperação de senha */
-#navRecover {
-  position: fixed;
+.fundoRecuperarSenha {
+  height: 100vh;
+  width: 100vw;
   display: flex;
-  width: 80%;
-  height: 130px;
-  justify-content: start;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  padding-left: 10%;
-  padding-right: 20%;
-  transition: top 1s;
-  z-index: 99;
-  background-color: #bad5db;
-  gap: 15px;
+  gap: 20px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../img/fundoRecover.svg");
 }
-.textoNavRecover{
-  font-family: "Raleway Bold";
-  font-size: 35px;
-  margin-bottom: 5px;
-}
-.logoNavbar {
-  width: 270px;
-}
-.formRecover{
+.formRecover {
+  width: 465px;
   background-color: #bad5db;
   padding: 50px;
   display: flex;
@@ -1270,243 +1258,35 @@ body {
   border-radius: 50px;
   align-items: center;
 }
-.tituloFormRecover{
-    font-family: "Raleway Bold", sans-serif;
-    color: #000000;
-    font-size: 40px;
-    margin-bottom: 10px;
+.itemsForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
-.textoFormRecover{
-    font-family: "Raleway Bold", sans-serif;
-    color: #000000;
-    font-size: 20px;
-    margin-bottom: 30px;
+.fotoRecover {
+  width: 245px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.tituloFormRecover {
+  font-family: "Raleway Bold", sans-serif;
+  color: #000000;
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 10px;
+  margin-left: 18px;
+  margin-right: 18px;
+}
+.textoFormRecover {
+  font-family: "Raleway Bold", sans-serif;
+  color: #000000;
+  font-size: 20px;
+  text-align: justify;
+  margin-bottom: 30px;
+}
+.textoFormRecoverEmail {
+  font-family: "Raleway Bold", sans-serif;
+  color: #db310c;
+  font-size: 20px;
+  margin-top: 30px;
+}
