--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,22 +93,7 @@ input[type="search"]::-ms-reveal {
 }
 
 
-.textPadrao {
-  font-family: "Raleway Bold";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 28px;
-}
 
-.textPlaceholder {
-  font-family: "Raleway Bold";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 28px;
-  color: #777777;
-}
 
 a {
   text-decoration: none;
@@ -126,6 +111,7 @@ body {
   padding: 0;
   outline: 0;
   text-decoration: none;
+  box-sizing: border-box;
   list-style: none;
   border: none;
 }
@@ -138,12 +124,10 @@ body {
 #navbar {
   position: fixed;
   display: flex;
-  width: 80%;
+  width: 100%;
   height: 130px;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
-  padding-left: 10%;
-  padding-right: 20%;
   transition: top 1s;
   z-index: 99;
   background-color: rgba(255, 255, 255, 0.3);
@@ -451,7 +435,7 @@ body {
   align-self: flex-end;
   padding-left: 4vw;
   height: 24vh;
-  width: 11rem;
+  width: 15rem;
 }
 
 .funcionalidadesHolder {
@@ -1535,6 +1519,41 @@ main .container .ladoEsquerdo .perfil{
   align-items: center;
   column-gap: 1rem;
   width: 100%;
+
+  position: relative;
+  overflow-x: hidden;
+  transition: all 300ms ease;
+}
+
+main .container .ladoEsquerdo .perfil::after{
+  content: "";
+  display: block;
+  width: 100%;
+  height: 0.4rem;
+  position: absolute;
+  background: var(--color-purple);
+  bottom: 0;
+  left: 0;
+
+
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.20s ease-out;
+}
+
+main .container .ladoEsquerdo .perfil:hover::after{
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+
+
+
+
+
+main .container .ladoEsquerdo .perfil h4{
+  color: var(--color-dark);
+
 }
 
 /* SIDE-BAR DO LADO ESQUERDO */
@@ -1939,3 +1958,6 @@ align-items: center;
   box-shadow: 1px 4px 19px 0px #696969;
 }
 
+
+
+/*  */
